Added button and new design

--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dominika Rycerz</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Dominika Rycerz</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- favicon -->
+  <link rel="icon" href="favicon.ico?v=2">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Sacramento&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Dominika.</h1>
+    <h2>a <span class="pro">pro</span>grammer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-img" src="images/profile-pic.png" alt="profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I'm a passionate, hard-working, self-taught junior frontend developer who loves building user-friendly and functional interfaces. I'm based in Warsaw, Poland.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <!-- Skills -->
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+        <img class="skill-icon-1" src="images/creativity.png" alt="design-icon">
+        <h3>HTML, CSS & JavaScript</h3>
+        <p>I create responsive websites that are clean and functional. So far, I've learned how to use HTML, CSS, and JavaScript.</p>
+      </div>
+      <div class="skill-row">
+        <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+        <img class="skill-icon-2" src="images/multiscreen.png" alt="responsive-design-icon">
+        <h3>Responsive Design & UX</h3>
+        <p>My previous job as a lawyer shown me that details are crucial. That is why I care about creating clean and functional websites that will look amazing regardless of the device.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <!-- Contact data -->
+      <h2>Get In Touch</h2>
+      <h3>To contact me click the button below.</h3>
+      <a class="BUTTON_DMS" href="mailto:dominikarycerz@hotmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://github.com/dominikarycerz">GitHub</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/rycerz/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Dominik27112223">Twitter</a>
+
+
+    <p class="copyright">© 2021 | Dominika Rycerz</p>
+  </div>
+
+
+  </div>
+
+</body>
+
 </html>
