--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Dominika.</h1>
+    <h1>Hello, I'm Dominika.</h1>
     <h2>a <span class="pro">pro</span>grammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
@@ -24,8 +24,8 @@
   <div class="middle-container">
     <div class="profile">
       <img class="profile-img" src="images/profile-pic.png" alt="profile-img">
-      <h2>Hello.</h2>
-      <p class="intro">I'm a passionate, hard-working, self-taught junior frontend developer who loves building user-friendly and functional interfaces. I'm based in Warsaw, Poland.</p>
+      <h2>Hi.</h2>
+      <p class="intro">I'm a passionate, hard-working, self-taught front end developer who loves building user-friendly and functional interfaces. Formerly specializing in law, now moved on to web development.</p>
     </div>
     <hr>
     <div class="skills">
@@ -34,21 +34,22 @@
       <div class="skill-row">
         <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
         <img class="skill-icon-1" src="images/creativity.png" alt="design-icon">
-        <h3>HTML, CSS & JavaScript</h3>
-        <p>I create responsive websites that are clean and functional. So far, I've learned how to use HTML, CSS, and JavaScript.</p>
+        <h3>HTML & CSS - Learning Journey</h3>
+        <p>I enjoy creating websites that are clean and functional. I built this page from scratch using HTML & CSS and now I'm learning JavaScript.</p>
       </div>
       <div class="skill-row">
         <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
         <img class="skill-icon-2" src="images/multiscreen.png" alt="responsive-design-icon">
-        <h3>Responsive Design & UX</h3>
-        <p>My previous job as a lawyer shown me that details are crucial. That is why I care about creating clean and functional websites that will look amazing regardless of the device.</p>
+        <h3>Clean code</h3>
+        <p>My previous job as a lawyer shown me that details are crucial if you want to succeed. That is why I care about learning how to create clean and functional websites that will be easy to maintain in the future.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <!-- Contact data -->
       <h2>Get In Touch</h2>
-      <h3>To contact me click the button below.</h3>
+      <h3>if you'd like to hire me or just chat about coding 💛</h3>
+      <p>Click the button below to send me an e-mail</p>
       <a class="BUTTON_DMS" href="mailto:dominikarycerz@hotmail.com">CONTACT ME</a>
     </div>
   </div>
